logging noblejs behaviors

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Electron Testing</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    and Electron <script>document.write(process.versions.electron)</script>
+
+    <script>
+       require('./index.js');
+    </script>
   </body>
 </html>
